--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gelişmiş Metinden Nota Yazıcı</h1>
+        <h1>Text to Notes</h1>
         <p class="instructions">
             Piyano bestesi formatındaki metni aşağıya yapıştırın. <br>
             Her ölçü için iki satır girin (üst satır sağ el, alt satır sol el). Ölçüleri boş bir satırla ayırın.<br>
